# kenoss.github.io

./: .gitignore  Makefile  config.toml  index.html  justfile  robots.txt  search_index.en.js  sitemap.xml  theme.css
.phony/: build  serve
blog/: index.html
content/blog/2021-12-02-sentry-init-in-async-main/code/example-sentry-init-in-async-main/: Cargo.toml
content/blog/2025-01-01-thin_delegate_aux/: Cargo.toml
content/blog/2025-01-01-thin_delegate_aux/src/: lib.rs
content/blog/2025-01-01-thin_delegate_aux/tests/: test.rs
content/blog/2025-01-01-thin_delegate_aux/tests/ui/ambassador/: fail_generics.rs  fail_generics.stderr  pass_basic.rs  pass_generics.rs
content/blog/2025-01-01-thin_delegate_aux/tests/ui/auto-delegate/: fail_conflict_impl_trait_for_field.rs  fail_conflict_impl_trait_for_field.stderr  fail_not_supported_associated_const.rs  fail_not_supported_associated_const.stderr  pass_basic.rs  pass_same_def_in_multiple_modules.rs
content/blog/2025-01-01-thin_delegate_aux/tests/ui/delegate/: pass_basic.rs
content/blog/2025-01-01-thin_delegate_aux/tests/ui/delegate-attr/: pass_basic.rs
content/blog/2025-01-01-thin_delegate_aux/tests/ui/enum_delegate_v020/: fail_super_trait.rs  fail_super_trait.stderr  pass_basic.rs  pass_implement_extarnal_trait.rs
content/blog/2025-01-01-thin_delegate_aux/tests/ui/enum_delegate_v030/: fail_not_supported_associated_const.rs  fail_not_supported_associated_const.stderr  fail_not_supported_super_trait.rs  fail_not_supported_super_trait.stderr  pass_basic.rs  pass_supported_std_types.rs
tags/: index.html
(+72 files in other folders)
