[package]
name = "thin_delegate_aux"
version = "0.0.0"
edition = "2021"

[dependencies]
ambassador = "0.4.1"
# I don't know why, but tests doesn't work with "= 0.1.3"
# auto-delegate = "= 0.1.3"
auto-delegate = { git = "https://github.com/not-elm/auto-delegate", commit = "50c2a0a" }
delegate = "0.13.1"
delegate-attr = "0.3.0"
enum_delegate_v020 = { package = "enum_delegate", version = "0.2.0" }
enum_delegate_v030 = { package = "enum_delegate", git = "https://gitlab.com/dawn_app/enum_delegate", commit = "f5bcaf4" }
enum_dispatch = "0.3.13"
portrait = "0.3.0"
trybuild = "1.0.101"
