[package]
name = "example-sentry-init-in-async-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
futures = "0.3.17"
sentry = "0.23.0"
tokio = { version = "1.12.0", features = ["full"] }
